# embedded-projects-in-c

./: README.md
projects/ota-client/: CMakeLists.txt  MockOTAServer.py  README.md  cert.pem  firmware_v1.1.0.hash  firmware_v1.1.0.sig  key.pem
projects/ota-client/src/: main.c  network_manager.c  network_manager.h  ota_client.c  ota_client.h  security_manager.c  security_manager.h
projects/sistema-monitoramento-atuadores/: CMakeLists.txt  README.md
projects/sistema-monitoramento-atuadores/src/: atuator_monitor.c
projects/tcp-epoll-server/: README.md
projects/tcp-epoll-server/src/: server.c
tcp-epoll-server/: CMakeLists.txt
